# grid-universe

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  intro-to-grid-universe.ipynb  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  docs.yml
app/: components.py  config.py  main.py  styles.css
app/config/: __init__.py  env_factory.py  shared_ui.py  types.py
app/keyup/: __init__.py
assets/kenney/: readme.txt
docs/: index.md  quickstart.md
docs/design/: components_reference.md  ecs_architecture.md  systems_lifecycle.md
docs/guides/: authoring_levels.md  extending_the_system.md  functional_api.md  gym_env.md  level_examples.md  movement_and_objectives.md  player_guide.md  rendering.md  state_and_systems.md
docs/reference/: api.md
ecs_maze/: entity.py  gym_env.py  moves.py  state.py  step.py  types.py
ecs_maze/components/: __init__.py
ecs_maze/levels/: generator.py
ecs_maze/renderer/: texture.py
ecs_maze/systems/: collectible.py  enemy.py  hazard.py  locked.py  movement.py  moving.py  portal.py  position.py  powerup.py  push.py  terminal.py  tile.py
ecs_maze/utils/: collectible.py  ecs.py  gc.py  health.py  inventory.py  maze.py  powerup.py  render.py
grid_universe/: actions.py  entity.py  gym_env.py  moves.py  objectives.py  state.py  step.py  types.py
grid_universe/components/: __init__.py
grid_universe/examples/: cipher_objective_levels.py  gameplay_levels.py  maze.py
grid_universe/levels/: README.md  convert.py  entity_spec.py  factories.py  generator.py  grid.py  maze.py
grid_universe/renderer/: __init__.py  texture.py
grid_universe/systems/: collectible.py  damage.py  enemy.py  hazard.py  locked.py  movement.py  moving.py  pathfinding.py  portal.py  position.py  powerup.py  push.py  status.py  terminal.py  tile.py  trail.py
grid_universe/utils/: collectible.py  color.py  ecs.py  gc.py  grid.py  health.py  image.py  inventory.py  math.py  maze.py  powerup.py  render.py  status.py  terminal.py  trail.py
tests/: test_utils.py
tests/integration/: test_collectible_integration.py  test_damage_integration.py  test_enemy_integration.py  test_hazard_integration.py  test_locked_integration.py  test_move_default.py  test_move_integration.py  test_move_variants.py  test_powerup_integration.py  test_push_integration.py  test_terminal_integration.py  test_tile_integration.py
tests/levels/: test_roundtrip.py
tests/systems/: test_collectible_system.py  test_damage_system.py  test_enemy_system.py  (+8 more)
(+60 files in other folders)
