[project]
name = "grid-universe"
version = "0.1.0"
description = "A modular, extensible, entity-component-system (ECS) gridworld environment"
authors = [{ name = "Muhammad Rizki Maulana", email = "rizki@rizkiarm.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "pyrsistent>=0.20.0",     # for immutable dicts/sets
    "Pillow>=11.2.1",         # for image loading/rendering
    "gymnasium>=1.1.1",       # for Gymnasium API
    "numpy>=2.2.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.45.0"]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "types-Pillow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_universe*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=grid_universe --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["grid_universe"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = "grid_universe"
strict = true
pretty = true
